+ fix       vertical-align: middle

--- a/public/app/assets/css/index.css
+++ b/public/app/assets/css/index.css
@@ -21,18 +21,18 @@
 .height_100 {
     height: 100%;
 }
-.hidden{
+
+.hidden {
     display: none!important
 }
 
 .form-control {
     background-image: none;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     background-color: #fff;
     border-radius: 4px;
     border: 1px solid #bfcbd9;
@@ -42,12 +42,21 @@
     height: 36px;
     line-height: 1;
     padding: 3px 10px;
-    transition: border-color .2s cubic-bezier(.645,.045,.355,1);
+    transition: border-color .2s cubic-bezier(.645, .045, .355, 1);
     width: 35%;
 }
+
 .del_btn {
     border-radius: 20px;
     width: 25px;
     height: 25px;
     margin-top: 10px;
-  }
+}
+
+.el-input {
+    vertical-align: middle;
+}
+
+.prop_label {
+    vertical-align: middle;
+}
